<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.SignupActivity">
    <ImageView
        android:id="@+id/nsbm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/nsbm"
        android:adjustViewBounds="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"
        android:importantForAccessibility="no"
        tools:ignore="VisualLintBounds" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/present"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/nsbm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userName"
        tools:ignore="VisualLintOverlap" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_curve_border"
        android:inputType="textPersonName"
        android:autofillHints="username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_curve_border"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/studentId"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/studentId"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/student_id"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_curve_border"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/batch"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />
    <Spinner
        android:id="@+id/batch"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"
        android:background="@drawable/white_curve_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/white_curve_border"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toLogin"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />
    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLogin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup" />
    <com.vvecon.present.Components.VButton
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/present_curve_bordered"
        android:text="@string/join"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
